clang/test/BSC/Negative/Coroutine/Other/Definition/async_constexpr_declaration/async_constexpr_declaration.cbs
// RUN: %clang_cc1 -verify %s 

#include "../../../future.hbs"

constexpr async int test(); // expected-error {{async function does not support constexpr}} 
constexpr async int test() { // expected-error {{async function does not support constexpr}} 
  return 42;
}

async int f(int start) {
  int a = await test();
  return a;
}

int main() {
  return 0;
}